{
    "myTasks": "Мои дела",
    "done_task": "Выполнено",
    "newTask" : "Новое",
    "jan" : "января",
    "feb" : "февраля",
    "mar" : "марта",
    "apr" : "апреля",
    "may" : "мая",
    "jun" : "июня",
    "jul" : "июля",
    "aug" : "августа",
    "sep" : "сентября",
    "okt" : "октября",
    "nov" : "ноября",
    "dec" : "декабря",
    "january" : "Январь",
    "february" : "Февраль",
    "march" : "Март",
    "april" : "Апрель",
    "may_im" : "Май",
    "june" : "Июнь",
    "july" : "Июль",
    "august" : "Август",
    "september" : "Сентябрь",
    "october" : "Октябрь",
    "november" : "Ноябрь",
    "december" : "Декабрь",
    "sun" : "Вс",
    "mon" : "Пн",
    "tue" : "Вт",
    "wed" : "Ср",
    "thu" : "Чт",
    "fri" : "Пт",
    "sat" : "Сб",
    "no" : "Нет",
    "low" : "Низкий",
    "high" : "!! Высокий",
    "needToDo" :  "Что надо сделать...",
    "delete" : "Удалить",
    "importance" : "Важность",
    "save" : "СОХРАНИТЬ",
    "do_until" : "Сделать до",
    "empty_name" : "Нельзя создать дело без имени :(",
    "done" : "ГОТОВО",
    "cancel" : "ОТМЕНА"
}