...
                    color: Theme.of(context).primaryColorDark,
                    blurRadius: 2.0,
                  ),
                ]),
            child: Consumer(builder: (context, ref, child) {
              return TextField(
                key: const Key('text_field'),
                controller: _textController,
                maxLines: null,
                minLines: 4,
                onChanged: (value) {
                  ref.read(editPageProvider.notifier).updateTask(
                        task.copyWith(
...
