...
        ),
      ),
      floatingActionButton: Consumer(
        builder: (context, ref, child) {
          return FloatingActionButton(
            backgroundColor: Theme.of(context).colorScheme.surface,
            tooltip: 'add_task',
            elevation: 6,
            onPressed: () {
              ref.read(navigationProvider).navigateToEditPage();
            },
            child: child,
          );
...
